fixed admin form pure

--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -6,8 +6,8 @@
 
 <a href="quality_check">Quality check</a>
 
-<!-- <form id="submit" ng-submit="submit()" class="pure-form pure-form-stacked"> -->
-<div ng-form name="form2" ng-submit="submit()" ng-controller="AdminObservationsCtrl">
+ <form id="submit" ng-submit="submit()" class="pure-form pure-form-stacked">
+<!--<div ng-form name="form2" ng-submit="submit()" class="pure-form pure-form-stacked"> -->
 
 <!-- View map -->
  <leaflet center="center" defaults="layers" markers="markers" controls="controls" height="400px" width="100%"></leaflet>
@@ -79,7 +79,8 @@
 </table>
 
 
-</div> <!-- ngForm -->
+<!-- </div> --> <!-- ngForm -->
+ </form>
 
 </div> <!-- isAdmin -->
 
@@ -90,7 +91,7 @@
 </div>
 
 
-<!-- </form> -->
+
 
 
 
