--- a/src/partials/user/my_observations.html
+++ b/src/partials/user/my_observations.html
@@ -36,5 +36,5 @@
 
 </div>
 <div ng-show="!security.isAuthenticated()">
-  <p>Please <a href="#/">log in</a> in order to view your sightings</p>
+  <p>Please <a href="/sighting/">log in</a> in order to view your sightings</p>
 </div>
