--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -2,21 +2,8 @@
 <h1><b>Map search <b></h1>
 
 
-<div ng-if="isAdmin()">
-
-<a href="quality_check">Quality check</a>
-
  <form id="submit" ng-submit="submit()" class="pure-form pure-form-stacked">
-<!--<div ng-form name="form2" ng-submit="submit()" class="pure-form pure-form-stacked"> -->
 
-<!-- View map -->
- <leaflet center="center" defaults="layers" markers="markers" controls="controls" height="400px" width="100%"></leaflet>
-
-
-  <p >Select an area on the map by dragging/dropping</p>
-
-  <br />
-  <!-- Search ------>
 
 <label for="search">General search:&nbsp;</label><input type="text" placeholder="Search Svalbard Sightings.." ng-model="search" />
 
@@ -25,8 +12,9 @@
 
 <div class="pure-g">
 <div class="pure-u-1 pure-u-md-1-1">
-<label for="species">Species: </label><select  ng-model="species" ng-options="items  as item.eng + ' (' + item.name + ')' for item in items">
-</select>
+<label for="species">Species: </label>
+     <select ng-model="species" ng-options="item as item.eng + ' (' + item.name + ')' for item in items">
+      <option value=""> Undefined </option></select>
 </div>
 
 
@@ -52,43 +40,9 @@
 </div>
 </div>
 
-<p></p>
-
-
-<!-- Create CSV -->
- <a href="csv">Create CSV</a><br /><br />
-
-<!--Table listing part -->
-
- <table class="layout1">
-    <thead>
- <th>Count</th><th>Date</th><th>Species</th><th>Location</th><th>Assessment</th><th>Excelfile</th><th>View</th><th>Edit</th><th>Delete</th>
-    </thead>
-    <tbody>
-   <tr ng-repeat="entry in entries"><td>{{$index + 1}}</td> <td>{{ (entry.event_date).substring(0,10) }}&nbsp;</td>
-
-        <td><a href="partials/edit_observations.html?id={{ entry.id }}">{{ entry.species }}&nbsp;</td>
-        <td>{{ entry.locality }}&nbsp;</td>
-        <td>{{ entry.editor_assessment }}&nbsp;</td>
-        <td><a href="http://{{hostname}}/{{entry.excelfile.filename}}">{{ entry.excelfile.filename }}&nbsp;</td>
-        <td><a href="#/observation/{{entry.id}}">View&nbsp;</a></td>
-         <td><a href="#/observation/edit/{{entry.id}}">Edit&nbsp;</a></td>
-        <td><a href="#/observation/delete/{{entry.id}}">Delete</a></td>
-  </tr>
-</tbody>
-</table>
-
-
-<!-- </div> --> <!-- ngForm -->
  </form>
 
-</div> <!-- isAdmin -->
 
-
-<div ng-show="!isAdmin()">
-
-      <p>Please <a href="/sighting">log in</a> with your admin account in order to view this page.</p>
-</div>
 
 
 
