admin access login ng-show

--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -1,6 +1,8 @@
 <h1><b>Map search <b></h1>
 
 
+ <div ng-show="isAdmin()">
+
 <a href="quality_check">Quality check</a>
 
 
@@ -77,6 +79,8 @@
 </table>
 
  </form>
+
+</div>  <!-- ng-show -->
 
 
 
