--- a/src/css/app.css
+++ b/src/css/app.css
@@ -74,6 +74,12 @@ h1 {
 
 }
 
+h3 {
+  color: black;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
 /*Get blue background for heading*/
 span.background-font {
   background-color: #4C9CF1;
