--- a/src/partials/open/_myuser.html
+++ b/src/partials/open/_myuser.html
@@ -2,38 +2,18 @@
   <div ng-show="security.isAuthenticated()">
 
     <button ng-click="logout()">Logout</button> <b>{{ user.name }}</b> (<a title="View profile for user {{user.username}}" ng-href="/user/{{user.username}}">{{ user.email }} </a>)
-
-   <!-- <p>Login session expires {{ 1000*user.exp | date:'HH:mm' }}</p>  -->
-
-    <!--<section>
-    <h2>Recent edits</h2>
-    <dl ng-repeat="edit in edits">
-      <dt>{{ edit.request.time }}</dt>
-      <dd><a href="{{ edit.response.header.Location }}">{{ edit.response.header.Location }}</a></dd>
-    </dl>
-    </section>-->
-
-   <!-- <section>
-      <h2>Permissions</h2>
-      <dl ng-repeat="system in user.systems">
-        <dt>{{ system.uri }}</dt>
-        <dd>{{ system.rights }}</dd>
-      </dl>
-    </section>-->
   </div>
 
   <div ng-show="security.notAuthenticated()">
-   <!-- <h1>Login2</h1> -->
     <form role="form">
       <section ng-show="true" ng-init="loginClicked = false;">
-      <div>
-        <label for="username">Username</label>
-        <input type="text" ng-model="user.username" id="username" placeholder="Username (email)">
-      </div>
-      <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" ng-model="user.password" placeholder="Password">
-      </div>
+      <table>
+        <tr><td>
+        <label for="username">Username&nbsp;</label></td><td>
+        <input type="text" ng-model="user.username" id="username" placeholder="Username (email)"></td></tr>
+        <tr><td><label for="password">Password&nbsp;</label></td><td>
+        <input type="password" id="password" ng-model="user.password" placeholder="Password"></td></tr>
+      </table>
       <p></p>
       <button id="login2" type="submit" ng-click="login(user.username, user.password)">Login</button>
       </section>
