--- a/src/partials/user/observers.html
+++ b/src/partials/user/observers.html
@@ -10,9 +10,8 @@
     </p>
 
 
-
-    <span ng-repeat="observer in feed.entries">
-     <b>{{ observer.recorded_by }}&nbsp;</b>
+    <span ng-repeat="observer in arr">
+     <b>{{ observer }}&nbsp;</b>
     </span>
 
 
