quality_check working

--- a/src/partials/admin/quality_check.html
+++ b/src/partials/admin/quality_check.html
@@ -18,8 +18,8 @@
         <td>{{ entry.locality }}&nbsp;</td>
         <td>{{ entry.latitude }}&nbsp;</td>
         <td>{{ entry.longitude }}&nbsp;</td>
-        <td><a href="observations/{{entry.id}}/edit">Edit</a></td>
-        <td><a href="observations/{{entry.id}}/delete">Delete</a></td>
+        <td><a href="observations/{{entry.id}}/editadmin">Edit</a></td>
+        <td><a href="observations/{{entry.id}}/deleteadmin">Delete</a></td>
    </tr>
    </tbody>
 </table>
