--- a/src/partials/user/images.html
+++ b/src/partials/user/images.html
@@ -4,13 +4,15 @@
 
 <!-- <div ng-if="security.isAuthenticated()">  -->
 
-<form ng-controller="UploadImagesCtrl">
+<!--<form ng-controller="UploadImagesCtrl">
 
 
     <input type="file"  onchange="angular.element(this).scope().filesChanged(this)" multiple accept=".image/*"/>
     <button ng-click="upload()">Upload</button>
     <li ng-repeat="file in files">{{file.name}}</li>
-</form>
+</form> -->
+
+<div picture></div>tester dette
 
 
 <!-- </div> -->
