--- a/src/partials/user/images.html
+++ b/src/partials/user/images.html
@@ -12,7 +12,20 @@
     <li ng-repeat="file in files">{{file.name}}</li>
 </form> -->
 
-<div picture></div>tester dette
+
+<form ng-controller="UploadImagesCtrl as entry">
+
+<!-- <div picture tester="ruby"></div>tester dette2  -->
+<input picture tester="ruby">
+<input ng-model="format">
+
+<span my-current-time="format">
+</span>
+
+
+
+</form>
+
 
 
 <!-- </div> -->
