image upload directive in progress

--- a/src/partials/user/images.html
+++ b/src/partials/user/images.html
@@ -12,19 +12,14 @@
     <li ng-repeat="file in files">{{file.name}}</li>
 </form> -->
 
-
-<form ng-controller="UploadImagesCtrl as entry">
-
-<!-- <div picture tester="ruby"></div>tester dette2  -->
-<input picture tester="ruby">
-<input ng-model="format">
-
-<span my-current-time="format">
-</span>
+<!--<form ng-submit="submit()">
+   <input type="text" id="filename" name="filename"><br>
+   <button type="submit">Submit</button>
+</form> -->
 
 
+<div picture pictures="pictures" show="show"></div>
 
-</form>
 
 
 
