image upload working /no wrapper

--- a/src/partials/user/images.html
+++ b/src/partials/user/images.html
@@ -2,32 +2,12 @@
 
 <h1><b>Upload Images. <b></h1>
 
-<!-- <div ng-if="security.isAuthenticated()">  -->
-
-<!--<form ng-controller="UploadImagesCtrl">
-
-
-    <input type="file"  onchange="angular.element(this).scope().filesChanged(this)" multiple accept=".image/*"/>
-    <button ng-click="upload()">Upload</button>
-    <li ng-repeat="file in files">{{file.name}}</li>
-</form> -->
 
 <form id="submit" ng-submit="submit()">
-     <div picture pictures="pictures" show="show"></div>
+    <!-- <div picture pictures="pictures" show="show"></div>  -->
+    <div picture pictures="pictures"></div>
       <input type="submit" id="submit" value="Submit" />
 </form>
-
-
-
-
-
-
-
-
-<!-- </div> -->
-<!-- <div ng-show="!security.isAuthenticated()">
-  <p>Please <a href="#/">log in</a> in order to upload excel files.</p>
-</div> -->
 
 
 
