--- a/src/partials/open/_myuser.html
+++ b/src/partials/open/_myuser.html
@@ -17,8 +17,8 @@
       <p></p>
       <button id="login2" type="submit" ng-click="login(user.username, user.password)">Login</button>
       </section>
-      <a ng-href="/user/reset?username={{user.username}}">Forgot password?</a>&nbsp;
-      <a href="/user/register">Sign up</a></section>
+      <a ng-href="https://app2.data.npolar.no/user/reset?username={{user.username}}">Forgot password?</a>&nbsp;
+      <a href="https://app2.data.npolar.no/user/register">Sign up</a></section>
     </form>
   </div>
 </div>
