--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -3,7 +3,9 @@
 
  <div ng-show="isAdmin()">
 
-<a href="quality_check">Quality check</a>
+<a href="quality_check">Quality check</a>&nbsp;&nbsp;
+<a href="upload">Upload Excelsheet</a>
+
 
 
  <form id="submit" ng-submit="submit()" class="pure-form pure-form-stacked">
