observer's unique names visible

--- a/src/partials/user/observers.html
+++ b/src/partials/user/observers.html
@@ -10,11 +10,9 @@
  </p>
 
 
-    <span ng-repeat="observer in arr.feed.entries ">
-     <b>{{ observer.recorded_by  }}&nbsp;</b>
+    <span ng-repeat="observer in arr ">
+     <b>{{ observer  }}&nbsp;</b>
     </span>
-
-    {{arr}}
 
 
 
