--- a/src/partials/admin/quality_check.html
+++ b/src/partials/admin/quality_check.html
@@ -7,13 +7,13 @@
 
 <p></p>
  <div ng-controller="QualityCtrl as entry">
-<table class="layout1">
+  <table class="layout1" st-table="displayedCollection" st-safe-src="full.feed.entries">
     <thead>
         <th>Date</th><th>Species</th><th>Location</th><th>Latitude</th><th>Longitude</th><th></th><th></th>
     </thead>
 
     <tbody>
-    <tr ng-repeat="entry in full.feed.entries"> <td>{{ (entry.event_date).substring(0,10) }}&nbsp;</td>
+    <tr ng-repeat="entry in displayedCollection"> <td>{{ (entry.event_date).substring(0,10) }}&nbsp;</td>
         <td>{{ entry.species}}&nbsp;</td>
         <td>{{ entry.locality }}&nbsp;</td>
         <td>{{ entry.latitude }}&nbsp;</td>
@@ -22,6 +22,13 @@
         <td><a href="observations/{{entry.id}}/deleteadmin">Delete</a></td>
    </tr>
    </tbody>
+   <tfoot>
+      <tr >
+        <td colspan="5" class="text-center">
+          <div st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
+        </td>
+      </tr>
+</tfoot>
 </table>
 </div>
 </div>
