login access fixed

--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -1,7 +1,7 @@
 <h1><b>Map search <b></h1>
 
 
- <div ng-show="isAdmin()">
+ <div ng-show="isAdmin">
 
 <a href="quality_check">Quality check</a>&nbsp;&nbsp;
 <a href="upload">Upload Excelsheet</a>
@@ -93,7 +93,7 @@
 
 
 
-<div ng-show="!isAdmin()">
+<div ng-show="!isAdmin">
 
       <p>Please <a href="/sighting">log in</a> with your admin account in order to view this page.</p>
 </div>
