--- a/src/partials/admin/delete_observation.html
+++ b/src/partials/admin/delete_observation.html
@@ -1,5 +1,5 @@
 
-
+<div ng-show="isAdmin">
 
 <form novalidate name="entryForm" class="css-form" ng-controller="DeleteAdminObservationCtrl as entry">
 <h1><b> Delete observation {{ entry.id }} <b></h1>
@@ -11,6 +11,13 @@ Are you sure you want to delete observation {{ entry.id }}?
 <input type="submit" ng-click="submit(entry.id)" value="Delete" />
 <input TYPE="button" value="Cancel" onClick="parent.location='quality_check/'">
 </form>
+
+</div>
+<div ng-show="!isAdmin">
+      <p>Please <a href="/sighting">log in</a> with your admin account in order to view this page.</p>
+</div>
+
+
 
 
 
