--- a/src/partials/admin/quality_check.html
+++ b/src/partials/admin/quality_check.html
@@ -3,7 +3,8 @@
 <h1><b> Quality check new observations<b></h1>
 <p></p>
 <p></p>
-<!--<div ng-if="security.isAuthorized('read', endpoint)">-->
+
+<div ng-show="isAdmin">
 
 <p></p>
  <div ng-controller="QualityCtrl as entry">
@@ -34,9 +35,8 @@
 </div>
 
 
-<!--</div>  -->
-<!-- if not logged in -->
-<!--    <div ng-if="!security.isAuthenticated()">
-  <h1><b>Administrators <b></h1>
-  <p>You need an administrator's account in order to use this module. </p>
-</div> -->
+<div ng-show="!isAdmin">
+
+      <p>Please <a href="/sighting">log in</a> with your admin account in order to view this page.</p>
+</div>
+
