--- a/src/partials/user/observers.html
+++ b/src/partials/user/observers.html
@@ -2,7 +2,7 @@
 <p></p>
 <p></p>
 
-<!-- <div ng-if="security.isAuthenticated()"> -->
+ <div ng-if="security.isAuthenticated()">
 
 <p></p>
 <p>
@@ -14,12 +14,10 @@
      <b>{{ observer  }}&nbsp;</b>
     </span>
 
-
-
-<!-- </div>
+</div>
 <div ng-show="!security.isAuthenticated()">
-  <p>Please <a href="#/">log in</a> in order to view all observers.</p>
-</div> -->
+  <p>Please <a href="/sighting/">log in</a> in order to view your sightings</p>
+</div>
 
 
 
