--- a/src/partials/user/view_observation.html
+++ b/src/partials/user/view_observation.html
@@ -1,13 +1,12 @@
-<!--
-  <div ng-include="'angular-npolar/ui/template/_head.html'"></div>
--->
+
 <h3>{{document.title}}</h3>
+
+
+<div ng-if="security.isAuthenticated()">
 <a ng-if="document.id && isAuthenticated()" ng-href="{{document.id}}/edit"><button class="btn btn-danger">edit</button></a>
-<!-- <button ng-click="locationBase()" class="btn btn-default">back</button></a> -->
 <button class="btn btn-default"><a href="./observations">Back</a></button>
-<!-- <div ng-repeat="(k,v) in document">
- <b>{{k }}</b>: {{v}}<br />
-</div> -->
+
+
 
         <br /><br />
         <h1>Observation &nbsp;{{document.id }}</h1><br />
@@ -79,4 +78,13 @@
 <b>Photographer:</b>&nbsp;{{picture.photographer}}<br />
 <b>Comment:</b>&nbsp;{{picture.comments}}<br /><br />
 </div>
+
+</div>
+
+
+<div ng-show="!security.isAuthenticated()">
+  <p>Please <a href="/sighting/">log in</a> in order to view your sightings</p>
+</div>
+
+
 
