--- a/src/partials/user/edit_observation.html
+++ b/src/partials/user/edit_observation.html
@@ -1,29 +1,17 @@
 
 <h1><b> Edit observation {{ entry.id }} <b></h1>
 
+<div ng-if="security.isAuthenticated()">
 
 <div formula="formula"></div>
 <button ng-click="duplicate()">duplicate</button>
 
+</div>
 
-<!--<form novalidate name="entryForm" class="pure-form pure-form-stacked"  ng-controller="EditObservationCtrl as entry">
+<div ng-show="!security.isAuthenticated()">
+  <p>Please <a href="/sighting/">log in</a> in order to view your sightings</p>
+</div>
 
-
-<div ng-include="'partials/user/form.html'"></div>
-
-<br/><br />
-<input type="submit" ng-click="submit(entry.id)" value="Save" />
-</form> -->
-
-<!--<br /><br />
-<h2>Upload images here:</h2> -->
-
-<!--
-<form ng-controller="UploadObservationsCtrl">
-    <input type="file" onchange="angular.element(this).scope().filesChanged(this)" multiple />
-    <button ng-click="upload()">Upload</button>
-    <li ng-repeat="file in files">{{file.name}}</li>
-</form>  -->
 
 
 
