added admin back button edit

--- a/src/partials/admin/edit_observation.html
+++ b/src/partials/admin/edit_observation.html
@@ -4,6 +4,7 @@
 
 <div ng-show="isAdmin">
 <div formula="formula"></div>
+<input TYPE="button" value="Back" onClick="parent.location='quality_check/'">
 </div>
 
 <div ng-show="!isAdmin">
